<resources>
    <string name="app_name">Criminal Intent</string>
    <string name="new_crime">New Crime</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="empty_list_message">The list is empty</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_title_hint">Enter a title for the crime</string>
    <string name="crime_datetime_label">Date/time</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_state_label">State</string>
    <string name="suspect_label">Suspect</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="photo_deleted_message">Photo deleted</string>
    <string name="suspect_deleted_message">There are no suspects</string>
    <string name="crime_photo_no_image_description">Take photo of crime scene (photo not set)</string>
    <string name="crime_photo_image_description">Crime scene photo</string>
</resources>